All_Component_DX/force-app/main/default/objects/SLA_Detail__c/SLA_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>SLA Details</description>
    <label>SLA Detail</label>
    <nameField>
        <displayFormat>SLAD-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>