All_Component_DX/force-app/main/default/objects/SLA_Detail__c/fields/Available_Services__c.field-meta.xml
<CustomField>
    <fullName>Available_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Available Services</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>SLA Details</relationshipLabel>
    <relationshipName>SLA_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>