All_Component_DX/force-app/main/default/objects/SLA_Detail__c/fields/Clock_Starts_From__c.field-meta.xml
<CustomField>
    <fullName>Clock_Starts_From__c</fullName>
    <label>Clock Starts From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>