All_Component_DX/force-app/main/default/objects/SLA_Detail__c/fields/Customer_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commitment__c</fullName>
    <label>Customer Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>