All_Component_DX/force-app/main/default/objects/SLA_Detail__c/fields/Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Details__c</fullName>
    <label>Service Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>