All_Component_DX/force-app/main/default/objects/SLA_Detail__c/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA Terms</label>
    <referenceTo>Service_Level__c</referenceTo>
    <relationshipLabel>SLA Details</relationshipLabel>
    <relationshipName>SLA_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>