All_Component_DX/force-app/main/default/objects/SLA_Detail__c/recordTypes/Commitment.recordType-meta.xml
<RecordType>
    <fullName>Commitment</fullName>
    <active>true</active>
    <description>Commitment</description>
    <label>Commitment</label>
</RecordType>