All_Component_DX/force-app/main/default/objects/SLA_Detail__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <description>Services</description>
    <label>Services</label>
</RecordType>